# local-context-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
crates/trae_core/: Cargo.toml
crates/trae_core/src/: command.rs  crypto.rs  database.rs  error.rs  lib.rs  paths.rs  process.rs  transfer.rs  types.rs
docs/: ARCHITECTURE.md
docs/release-notes/: README-PORTABLE.txt  v0.1.0.md  v0.1.1.md  v0.1.2.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AccountRail.tsx  Badge.tsx  BottomBar.tsx  Button.tsx  ConversationTable.tsx  Shell.tsx  TransferPanel.tsx  toast.tsx
src/lib/: api.ts  demoData.ts  types.ts  utils.ts
