[package]
name = "trae_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aes = "0.8"
cbc = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
